--- a/models.ipynb
+++ b/models.ipynb
@@ -1748,7 +1748,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "3.13.0",
    "language": "python",
    "name": "python3"
   },
